--- a/papers/Cr/bib.bib
+++ b/papers/Cr/bib.bib
@@ -171,3 +171,17 @@ volume = {7},
 year = {1965}
 }
 
+@article{Monserrat2017,
+abstract = {For static crystals it is well known that electronic states are doubly degenerate in their spin degree of freedom in the presence of time reversal and inversion symmetries. This degeneracy can only be lifted by either (i) breaking time reversal symmetry, for example in a ferromagnet, or (ii) breaking inversion symmetry and having spin orbit coupling, for example in the Rashba effect. We propose that spin degeneracy can be lifted in time reversal and inversion symmetric crystals with a combination of lattice vibrations and spin-orbit coupling. We demonstrate this effect in the cubic perovskite CsPbCl{\$}{\_}3{\$} by performing first principles calculations of the finite temperature band structure, which, in accordance with our prediction, undergoes spin splitting. We also suggest optical and photoemission experiments to examine our predictions. This new understanding dramatically expands the range of materials that can exhibit spin splitting, with potential applications in a variety of technologies such as spintronics and photovoltaics.},
+archivePrefix = {arXiv},
+arxivId = {1711.06274},
+author = {Monserrat, Bartomeu and Vanderbilt, David},
+eprint = {1711.06274},
+file = {:home/ponet/Documents/Mendeley Desktop/Monserrat, Vanderbilt - 2017 - Phonon-assisted spin splitting in centrosymmetric crystals.pdf:pdf},
+number = {4},
+pages = {1--5},
+title = {{Phonon-assisted spin splitting in centrosymmetric crystals}},
+url = {http://arxiv.org/abs/1711.06274},
+year = {2017}
+}
+
