--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -90,12 +90,12 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \tableofcontents
 
 % \Include{Introduction}
-% % \Include{Theory}
+% \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
 % \Include{GdMn2O5}
-% \Include{Softening}
-\Include{Cr}
+\Include{Softening}
+% \Include{Cr}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
