--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -896,3 +896,18 @@ isbn = {9783319411941},
 title = {{Programming Phase-Field Modeling}}
 }
 
+@article{Marton2018,
+abstract = {We have analysed domain-wall-motion-related energy barriers, which originate from the regular discretisation grid utilised in phase-field simulations of ferroelectric materials. We develop three approaches to determine the barrier height, and we demonstrate these on a specific model of BaTiO3. All lead to comparable results. Finally, we show that the barrier properties for both 180{\textordmasculine} and 90{\textordmasculine} domain walls depend on the size of the discretisation step and the distance between the domain walls.},
+author = {Marton, P.},
+doi = {10.1080/01411594.2018.1515434},
+file = {:home/ponet/Documents/Mendeley Desktop/01411594.2018.1515434.pdf:pdf},
+issn = {10290338},
+journal = {Phase Transitions},
+keywords = {BaTiO3,Ferroelectrics,Ginzburg–Landau–Devonshire model,Peierls–Nabarro barrier,domain walls,phase-field simulations},
+number = {9-10},
+pages = {959--968},
+title = {{Discretisation originated Peierls–Nabarro barriers in simulations of ferroelectrics}},
+volume = {91},
+year = {2018}
+}
+
